--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</title>  <!-- তোমার টাইটেল এখানে -->
+  <title>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</title>
   <style>
     /* Reset */
     * {
@@ -60,8 +60,9 @@
     }
     input[type="text"] {
       flex: 1 1 170px;
-      padding: 15px 20px;
-      font-size: 1.2rem;
+      padding: 20px 25px;
+      font-size: 2.4rem; /* বড় ফন্ট সাইজ */
+      font-weight: 700; /* মোটা ফন্ট */
       border-radius: 12px;
       border: none;
       outline: none;
@@ -70,6 +71,8 @@
       box-shadow: inset 0 0 12px #00ff8844;
       text-align: center;
       transition: box-shadow 0.3s ease;
+      letter-spacing: 6px; /* সংখ্যাগুলো আলাদা করার জন্য */
+      user-select: text;
     }
     input[type="text"]:focus {
       box-shadow: inset 0 0 18px #00ff88aa;
@@ -78,8 +81,8 @@
       background: #00ff88;
       color: #121212;
       font-weight: 700;
-      font-size: 1.2rem;
-      padding: 15px 30px;
+      font-size: 1.5rem; /* একটু বড় */
+      padding: 18px 30px;
       border-radius: 12px;
       border: none;
       cursor: pointer;
@@ -213,7 +216,7 @@
 </head>
 <body>
   <main class="card" role="main" aria-label="Hridoy Signal Tools Calculator">
-    <h1>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</h1>  <!-- এখানে টাইটেল -->
+    <h1>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</h1>
     <div class="input-container">
       <input
         id="periodInput"
