--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</title>
+  <title>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕</title>
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box;
@@ -201,7 +201,7 @@
 </head>
 <body>
   <main class="card" role="main" aria-label="Hridoy Signal Tools Calculator">
-    <h1>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕 𝗕𝗜𝗚 𝗖𝗢𝗠𝗠𝗨𝗡𝗜𝗧𝗬</h1>
+    <h1>🎁 𝗔𝗠𝗔𝗥 𝗖𝗟𝗨𝗕</h1>
     <div class="input-container">
       <input
         id="periodInput"
