--- a/index.html
+++ b/index.html
@@ -1,129 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Amar Club</title>
-<style>
-  *{margin:0;padding:0;box-sizing:border-box;}
-  body{
-    background:#000;color:#f00;font-family:monospace;
-    overflow:hidden;height:100vh;
-    display:flex;justify-content:center;align-items:center;
-  }
-  canvas{
-    position:fixed;inset:0;width:100%;height:100%;z-index:-1;
-  }
-  body::before{
-    content:'';position:fixed;inset:0;
-    background:repeating-linear-gradient(rgba(255,0,0,.03)0px,rgba(255,0,0,.03)1px,transparent2px);
-    animation:scan5s linear infinite;pointer-events:none;z-index:0;
-  }
-  @keyframes scan{0%{background-position:0 0;}100%{background-position:0 100%;}}
-  .panel{
-    position:relative;z-index:1;width:92vw;max-width:420px;
-    background:rgba(0,0,0,.7);border:1px solid rgba(255,0,0,.35);
-    box-shadow:0 0 24px rgba(255,0,0,.25);
-    border-radius:16px;padding:20px 16px 24px; backdrop-filter:blur(6px);
-  }
-  .heading{
-    text-align:center;font-weight:800;font-size:24px;letter-spacing:2px;
-    color:#ff9c9c;text-shadow:0 0 10px #f00,0 0 18px #f00;margin-bottom:16px;
-  }
-  .input-wrap{position:relative;margin-top:24px;}
-  .title-over-input{
-    position:absolute;left:50%;transform:translate(-50%,-60%);top:0;
-    padding:6px 14px;background:#000;border:1px solid rgba(255,0,0,.6);
-    border-radius:999px;font-weight:800;font-size:13px;letter-spacing:1.5px;
-    color:#ffb5b5;text-shadow:0 0 8px #ff0000;
-    box-shadow:0 0 12px rgba(255,0,0,.35), inset 0 0 8px rgba(255,0,0,.15);
-    pointer-events:none;white-space:nowrap;
-  }
-  label{display:block;font-size:12px;color:#ff6c6c;margin-bottom:8px;letter-spacing:.5px;}
-  input[type=text]{
-    width:100%;padding:14px 16px;border-radius:12px;border:1px solid rgba(255,0,0,.45);
-    background:rgba(0,0,0,.65);color:#ffcccc;font-size:18px;
-    outline:none;text-align:center;box-shadow:inset 0 0 10px rgba(255,0,0,.15);
-  }
-  input[type=text]::placeholder{color:#a43f3f;}
-  input[type=text]:focus{border-color:#ff006a;box-shadow:0 0 10px rgba(255,0,128,.4),inset 0 0 12px rgba(255,0,128,.2);}
-  button{
-    width:100%;margin-top:14px;padding:14px;background:linear-gradient(135deg,#ff8888 0%,#ff0000 100%);
-    border:none;border-radius:12px;color:#000;font-size:16px;
-    font-weight:800;letter-spacing:1px;cursor:pointer;box-shadow:0 10px 20px rgba(255,0,0,.2);
-  }
-  button:active{transform:translateY(1px);}
-  .result-box{
-    margin-top:16px;padding:16px;border-radius:12px;font-weight:800;font-size:18px;color:#ffeaea;
-    text-align:center;min-height:56px;border:1px solid rgba(255,0,0,.25);box-shadow:inset 0 0 12px rgba(255,0,0,.15);
-  }
-  .small{background-color:rgba(0,100,255,.12);} .big{background-color:rgba(255,152,0,.12);}
-  .red{color:#ff6a6a;text-shadow:0 0 8px #ff0000;} .hacking-effect{animation:glitch1s infinite;}
-  @keyframes glitch{
-    0%{text-shadow:2px 2px #f00,-2px -2px #900;}20%{text-shadow:-2px -1px #f00,2px 1px #900;}
-    40%{text-shadow:2px -1px #f00,-1px 1px #900;}60%{text-shadow:-1px 1px #f00,1px -1px #900;}
-    80%{text-shadow:1px -1px #f00,-2px 2px #900;}100%{text-shadow:0 0 5px #f00,0 0 10px #900;}
-  }
-  @media(max-width:420px){.heading{font-size:22px;}input[type=text]{font-size:17px;}}
+  <meta charset="UTF-8" />
+  <title>Ads Income Place</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="//libtl.com/sdk.js" data-zone="9777736" data-sdk="show_9777736"></script>
 
-  /* contact button */
-  .dev-btn{
-    position:absolute;top:-12px;right:-12px;padding:8px 14px;
-    background:rgba(255,0,0,.85);color:#fff;border-radius:20px;
-    font-size:13px;font-weight:700;letter-spacing:.5px;text-decoration:none;
-    box-shadow:0 5px 15px rgba(255,0,0,.4);transition:.3s;
-  }
-  .dev-btn:hover{transform:scale(1.06) translateY(-2px);box-shadow:0 8px 18px rgba(255,0,0,.6);}
-</style>
+  <style>
+    * {margin: 0; padding: 0; box-sizing: border-box;}
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #4f46e5, #9333ea);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 40px 20px;
+      color: #fff;
+    }
+    .container {
+      width: 100%;
+      max-width: 420px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    h2 {
+      text-align: center;
+      font-size: 28px;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+    p.subtitle {
+      text-align: center;
+      color: #e0e0ff;
+      font-size: 15px;
+      margin-bottom: 15px;
+    }
+    .card {
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 20px;
+      padding: 25px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.25);
+      transition: transform 0.25s ease;
+    }
+    .card:hover {transform: translateY(-4px);}
+    
+    .profile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+    }
+    .profile img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 3px solid #fff;
+    }
+    .user-name {
+      font-size: 20px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .verify-icon {color: #00bfff; font-size: 18px;}
+    .premium-icon {color: gold; font-size: 18px;}
+    .info {font-size: 15px; margin-top: 4px;}
+
+    .btn {
+      width: 100%;
+      padding: 14px;
+      border-radius: 12px;
+      border: none;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 10px;
+      color: #fff;
+      background: linear-gradient(90deg, #7c3aed, #4f46e5);
+      transition: all 0.3s ease;
+    }
+    .btn:hover {transform: scale(1.05);}
+    .btn:active {transform: scale(0.95);}
+    .back-btn {background: linear-gradient(90deg, #374151, #111827);}
+    #countdown {
+      margin-top: 12px;
+      font-size: 14px;
+      font-weight: bold;
+      color: #ffeb3b;
+    }
+    input, select {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      font-size: 15px;
+    }
+    .hidden {display: none;}
+  </style>
 </head>
 <body>
-<canvas id="matrix"></canvas>
-<div class="panel">
+  <div class="container">
+    <h2>🎥 ADS INCOME PLACE</h2>
+    <p class="subtitle">Earn 50 coins after ad + claim</p>
 
-  <!-- contact button -->
-  <a href="https://t.me/HRIDOY_CYBER_ZONE" target="_blank" class="dev-btn">Contact</a>
-
-  <div class="heading">AMAR CLUB</div>
-  <form id="cloubForm" autocomplete="off">
-    <label for="numbersInput">Enter Three Numbers (0-9) Without Spaces</label>
-    <div class="input-wrap">
-      <div class="title-over-input">VIP</div>
-      <input type="text" id="numbersInput" name="numbersInput" maxlength="3" pattern="[0-9]{3}"
-       required placeholder="e.g. 000" inputmode="numeric" />
+    <!-- Profile Card -->
+    <div class="card" id="profile">
+      <div class="profile">
+        <img id="user-photo" src="https://telegram.org/img/t_logo.png" alt="Profile">
+        <div class="user-name">
+          <span class="verify-icon">✔️</span>
+          <span id="user-name">Loading...</span>
+          <span class="premium-icon">⭐</span>
+        </div>
+        <div class="info"><b>Balance:</b> <span id="balance">0</span> coins</div>
+        <div class="info"><b>Ads Watched:</b> <span id="views">0</span></div>
+      </div>
     </div>
-    <button type="submit">Calculate Result</button>
-  </form>
-  <div id="result" class="result-box">
-    Please enter three numbers and click Calculate.
+
+    <!-- Ad Section -->
+    <div class="card" id="ad-section">
+      <button class="btn" onclick="watchAd()">🎬 Watch Ad</button>
+      <button class="btn hidden" id="claimBtn" onclick="claimCoins()">🎁 Claim Coin</button>
+      <p id="countdown"></p>
+    </div>
+
+    <!-- Withdraw/Referral Main -->
+    <div class="card">
+      <button class="btn" onclick="showWithdraw()">💸 Withdraw</button>
+      <button class="btn" onclick="showReferral()">🤝 Refer</button>
+    </div>
+
+    <!-- Withdraw Section -->
+    <div class="card hidden" id="withdraw-section">
+      <h3>Withdraw Coins</h3>
+      <select id="method">
+        <option value="bkash">Bkash</option>
+        <option value="nagad">Nagad</option>
+      </select>
+      <input type="number" id="coinAmount" placeholder="Enter Coin Amount" oninput="calculateBDT()">
+      <p id="bdtValue">You will get: 0 BDT</p>
+      <input type="text" id="accountNumber" placeholder="Enter your account number">
+      <button class="btn" onclick="submitWithdraw()">Submit</button>
+      <button class="btn back-btn" onclick="goBack()">🔙 Back</button>
+    </div>
+
+    <!-- Referral Section -->
+    <div class="card hidden" id="referral-section">
+      <h3>Your Referral Link</h3>
+      <p id="refLink">https://t.me/ads25_income_bot?start=ref</p>
+      <button class="btn" onclick="copyReferral()">☕ Copy</button>
+      <button class="btn back-btn" onclick="goBack()">🔙 Back</button>
+    </div>
   </div>
-</div>
 
-<script>
-  const canvas=document.getElementById("matrix"),ctx=canvas.getContext("2d");
-  function resizeCanvas(){canvas.width=window.innerWidth;canvas.height=window.innerHeight;}
-  resizeCanvas();window.addEventListener("resize",resizeCanvas);
-  const glyphs="01<>[]{}#@$%^&*+=-ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-  const fontSize=16;let columns=Math.floor(canvas.width/fontSize);let drops=new Array(columns).fill(0);
-  function draw(){
-    ctx.fillStyle="rgba(0,0,0,0.08)";ctx.fillRect(0,0,canvas.width,canvas.height);
-    ctx.fillStyle="#f00";ctx.font=fontSize+"px monospace";
-    for(let i=0;i<drops.length;i++){const t=glyphs.charAt(Math.floor(Math.random()*glyphs.length)),x=i*fontSize,y=(drops[i]+1)*fontSize;
-      ctx.fillText(t,x,y); if(y>canvas.height)drops[i]=0; else drops[i]++;}
-    requestAnimationFrame(draw);
-  } requestAnimationFrame(draw);
-  window.addEventListener("resize",()=>{columns=Math.floor(canvas.width/fontSize);drops=new Array(columns).fill(0);});
+  <script>
+    const tg = window.Telegram.WebApp;
+    tg.expand();
 
-  const form=document.getElementById("cloubForm"),resultBox=document.getElementById("result");
-  form.addEventListener("submit",e=>{
-    e.preventDefault();let v=form.numbersInput.value.trim();
-    if(!/^[0-9]{3}$/.test(v)){resultBox.textContent="Please enter exactly 3 digits (0-9) without spaces.";resultBox.className="result-box";return;}
-    const d=v.split("").map(n=>parseInt(n)),[n1,n2,n3]=d,total=(n1+n2)-n3;
-    let size=""; if(total>=0&&total<=4)size="small"; else if(total>=5&&total<=9)size="big";
-    const color="red"; resultBox.textContent="ACCESSING SYSTEM..."; resultBox.className="result-box hacking-effect";
-    setTimeout(()=>{const sTxt=size==="small"?"SMALL":"BIG"; const cTxt="RED";
-      const txt=`Result: <span>${total}</span> — ${sTxt} — <span class="${color}">${cTxt}</span>`;
-      resultBox.innerHTML=txt; resultBox.className=`result-box ${size} ${color}`;},1500);
-  });
-</script>
+    const userName = tg.initDataUnsafe?.user?.first_name || "Unknown";
+    const userId = tg.initDataUnsafe?.user?.id || "Unknown";
+    const photoUrl = tg.initDataUnsafe?.user?.photo_url || "https://telegram.org/img/t_logo.png";
+
+    document.getElementById("user-name").innerText = userName;
+    document.getElementById("user-photo").src = photoUrl;
+
+    let coins = parseInt(localStorage.getItem("coins")) || 0;
+    let views = parseInt(localStorage.getItem("views")) || 0;
+
+    function updateUI() {
+      document.getElementById("balance").innerText = coins;
+      document.getElementById("views").innerText = views;
+    }
+    function saveData() {
+      localStorage.setItem("coins", coins);
+      localStorage.setItem("views", views);
+    }
+
+    function watchAd() {
+      document.getElementById("claimBtn").classList.add("hidden");
+      document.getElementById("countdown").innerText = "⏳ Please wait 10 seconds...";
+
+      if (typeof show_9777736 === "function") { show_9777736(); }
+
+      let countdown = 10;
+      const interval = setInterval(() => {
+        countdown--;
+        document.getElementById("countdown").innerText = `⏳ Please wait ${countdown} seconds...`;
+        if (countdown <= 0) {
+          clearInterval(interval);
+          document.getElementById("countdown").innerText = "✅ Ad watched. Now claim your coin!";
+          document.getElementById("claimBtn").classList.remove("hidden");
+        }
+      }, 1000);
+    }
+
+    function claimCoins() {
+      document.getElementById("claimBtn").classList.add("hidden");
+      document.getElementById("countdown").innerText = "⏳ Showing ad before claim...";
+
+      if (typeof show_9777736 === "function") { show_9777736(); }
+
+      let countdown = 10;
+      const interval = setInterval(() => {
+        countdown--;
+        document.getElementById("countdown").innerText = `⏳ Claiming in ${countdown} seconds...`;
+        if (countdown <= 0) {
+          clearInterval(interval);
+          coins += 50;
+          views++;
+          saveData();
+          updateUI();
+          document.getElementById("countdown").innerText = "🎉 You earned 50 coins!";
+        }
+      }, 1000);
+    }
+
+    function showWithdraw() {
+      document.getElementById("withdraw-section").classList.remove("hidden");
+      document.getElementById("ad-section").classList.add("hidden");
+      document.getElementById("referral-section").classList.add("hidden");
+    }
+
+    function calculateBDT() {
+      const amount = parseInt(document.getElementById("coinAmount").value) || 0;
+      const bdt = (amount * 0.0038).toFixed(2);
+      document.getElementById("bdtValue").innerText = `You will get: ${bdt} BDT`;
+    }
+
+    function submitWithdraw() {
+      const method = document.getElementById("method").value;
+      const amount = parseInt(document.getElementById("coinAmount").value);
+      const account = document.getElementById("accountNumber").value.trim();
+
+      if (isNaN(amount) || amount < 100000) {
+        alert("Minimum withdraw is 100000 coins.");
+        return;
+      }
+      if (!account || account.length < 6) {
+        alert("Please enter a valid account number.");
+        return;
+      }
+      if (amount > coins) {
+        alert("You don't have enough coins.");
+        return;
+      }
+
+      coins -= amount;
+      saveData();
+      updateUI();
+
+      document.getElementById("withdraw-section").innerHTML = `
+        <h3>✅ Withdraw request submitted!</h3>
+        <p>Method: ${method.toUpperCase()}</p>
+        <p>Amount: ${amount} coins</p>
+        <p>Account Number: ${account}</p>
+        <p>We will process your request soon.</p>
+        <button class="btn back-btn" onclick="goBack()">🔙 Back</button>
+      `;
+    }
+
+    function showReferral() {
+      document.getElementById("referral-section").classList.remove("hidden");
+      document.getElementById("withdraw-section").classList.add("hidden");
+      document.getElementById("ad-section").classList.add("hidden");
+
+      document.getElementById("refLink").innerText =
+        `https://t.me/ads25_income_bot?start=${userId}`;
+    }
+
+    function copyReferral() {
+      const ref = document.getElementById("refLink").innerText;
+      navigator.clipboard.writeText(ref);
+      alert("Referral link copied!");
+    }
+
+    function goBack() {
+      document.getElementById("withdraw-section").classList.add("hidden");
+      document.getElementById("referral-section").classList.add("hidden");
+      document.getElementById("ad-section").classList.remove("hidden");
+      updateUI();
+    }
+
+    updateUI();
+  </script>
 </body>
 </html>
